<resources>
    <string name="app_name">HabitTrackerANMP</string>
    <string name="login_title">Habit Tracker</string>
    <string name="login_subtitle">Masuk untuk melanjutkan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_empty_state">Belum ada habit. Tekan tombol + untuk menambahkan habit baru.</string>
    <string name="add_habit">Tambah habit</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="completed_mark">\u2713</string>
    <string name="habit_icon">Icon habit</string>
    <string name="progress_label">Progress</string>
    <string name="habit_progress_detail_format">%1$d / %2$d %3$s</string>
    <string name="back_arrow">‹</string>
    <string name="create_new_habit">Create New Habit</string>
    <string name="add_new_habit">Add a New Habit</string>
    <string name="habit_name">Habit Name</string>
    <string name="habit_name_required">Habit Name *</string>
    <string name="habit_description">Short Description</string>
    <string name="habit_description_required">Short Description *</string>
    <string name="habit_goal">Goal</string>
    <string name="habit_goal_required">Goal *</string>
    <string name="goal_helper">How many to complete this task?</string>
    <string name="unit_required">Unit *</string>
    <string name="unit_helper">e.g. glasses, minutes, pages, meals</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="select_icon">Select Icon *</string>
    <string name="create_habit">Create Habit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Ditambahkan untuk Edit Habit -->
    <string name="edit_habit_title">Edit Habit</string>
    <string name="edit_habit_header">Edit Your Habit</string>
    <string name="update_habit">Update Habit</string>
</resources>